--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+client_secret_260771863698-vjqm75a1bttob7ko11ftcuahtv6q3fh8.apps.googleusercontent.com.json
