--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@svgr/webpack": "^8.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
