--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^8.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -23,7 +24,7 @@
   "devDependencies": {
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3"
   }
 }
