Implement API route for uploading Google Sheets data to BigQuery

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-cloud/bigquery": "^7.9.3",
     "@svgr/webpack": "^8.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "googleapis": "^148.0.0",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
