--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@google-cloud/bigquery": "^7.9.3",
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "googleapis": "^148.0.0",
